--- a/index.html
+++ b/index.html
@@ -3,10 +3,65 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <ref="stylesheet" href="styles.css">
+    <ref="stylesheet" href="style.css">
     <title>Eimmy's GitHub Page</title>
 </head>
 <body>
-    <p>Page</p>
+    <header>
+    <h1>Portafolio de Eimmy Ochoa Morán</h1>
+    <p>Estudiante de Ingeniería en Ciencias Computacionales | ESPOL</p>
+  </header>
+
+  <main>
+    <!-- Sección principal -->
+    <section id="about">
+      <h2>Sobre mí</h2>
+      <p>
+        Soy estudiante apasionada por el desarrollo de software, con interés en crear
+        soluciones innovadoras utilizando tecnologías modernas.
+      </p>
+    </section>
+
+    <!-- Sección de proyectos -->
+    <section id="projects">
+      <h2>Proyectos</h2>
+
+      <article>
+        <h3>1. Sistema de Gestión de Tareas</h3>
+        <p>Aplicación en Python que permite registrar, actualizar y completar tareas.</p>
+        <p><strong>Tecnologías:</strong> Python, SQLite</p>
+        <a href="https://github.com/tuusuario/proyecto-tareas" target="_blank">Ver repositorio</a>
+      </article>
+
+      <article>
+        <h3>2. Página Web Personal</h3>
+        <p>Sitio web estático desarrollado en HTML y CSS como portafolio inicial.</p>
+        <p><strong>Tecnologías:</strong> HTML, CSS</p>
+        <a href="https://github.com/tuusuario/proyecto-web" target="_blank">Ver repositorio</a>
+      </article>
+
+      <article>
+        <h3>3. Juego Adivina el Número</h3>
+        <p>Juego interactivo en Java que genera un número aleatorio para adivinar.</p>
+        <p><strong>Tecnologías:</strong> Java</p>
+        <a href="https://github.com/tuusuario/juego-adivina" target="_blank">Ver repositorio</a>
+      </article>
+    </section>
+
+    <!-- Sección de tecnologías -->
+    <section id="technologies">
+      <h2>Tecnologías y Herramientas</h2>
+      <ul>
+        <li><strong>Python:</strong> Desarrollo de aplicaciones y scripts.</li>
+        <li><strong>Java:</strong> Programación orientada a objetos y juegos simples.</li>
+        <li><strong>HTML & CSS:</strong> Creación de interfaces y diseño web.</li>
+        <li><strong>Git & GitHub:</strong> Control de versiones y despliegue de proyectos.</li>
+      </ul>
+    </section>
+  </main>
+
+  <footer>
+    <p>© 2025 - Portafolio de Eimmy | Correo: eimvocho@espol.edu.ec</p>
+  </footer>
 </body>
 </html>
