--- a/index.html
+++ b/index.html
@@ -25,24 +25,24 @@
       <h2>Proyectos</h2>
 
       <article>
-        <h3>1. Sistema de Gestión de Tareas</h3>
-        <p>Aplicación en Python que permite registrar, actualizar y completar tareas.</p>
-        <p><strong>Tecnologías:</strong> Python, SQLite</p>
-        <a href="https://github.com/tuusuario/proyecto-tareas" target="_blank">Ver repositorio</a>
+        <h3>1. Calculadora de Resistencias (FESD)</h3>
+        <p>Página web interactiva que calcula los valores de resistencias electrónicas según los colores de las bandas o los valores ingresados.</p>
+        <p><strong>Tecnologías:</strong> HTML, CSS, JavaScript</p>
+        <a href="https://github.com/eimmy-o/fesd-pagina-resistencias" target="_blank">Ver repositorio</a>
       </article>
 
       <article>
         <h3>2. Página Web Personal</h3>
         <p>Sitio web estático desarrollado en HTML y CSS como portafolio inicial.</p>
         <p><strong>Tecnologías:</strong> HTML, CSS</p>
-        <a href="https://github.com/tuusuario/proyecto-web" target="_blank">Ver repositorio</a>
+        <a href="https://github.com/codebyeimmy/portafolio-website" target="_blank">Ver repositorio</a>
       </article>
 
       <article>
-        <h3>3. Juego Adivina el Número</h3>
-        <p>Juego interactivo en Java que genera un número aleatorio para adivinar.</p>
+        <h3>3. Ejemplos de Code Smells</h3>
+        <p>Colección de ejemplos de código con malas prácticas (code smells) utilizados como material de aprendizaje y discusión.</p>
         <p><strong>Tecnologías:</strong> Java</p>
-        <a href="https://github.com/tuusuario/juego-adivina" target="_blank">Ver repositorio</a>
+        <a href="https://github.com/eimmy-o/code_smells" target="_blank">Ver repositorio</a>
       </article>
     </section>
 
